fin de la page partenaire

--- a/fr/Partenaires.html
+++ b/fr/Partenaires.html
@@ -35,72 +35,117 @@
     <h1 class="main__intro-title">Partenaires</h1>
     <p class="main__intro-text">
         Découvrez les autres projets innovants de mon groupe ! Chaque membre de mon groupe apporte une vision unique et des compétences variées, donnant vie à des créations originales. Que ce soit des sites web ou des applications , ces projets reflètent notre passion pour le numérique et l'innovation. Parcourez les différentes réalisations et laissez-vous inspirer par la créativité et le savoir-faire de chacun.    </p>
-    <img 
-          src="/assets/img/nolan.webp" 
-          alt="nolan" 
-          class="article__img" 
-        />
+        <img 
+        src="/assets/img/logo_mmi.png" 
+        alt="nolan" 
+        class="article__img" 
+      />
   </section>
       
       <!-- === CARROUSEL === -->
       <div class="carousel" id="PartenairesCarousel">
         
-        <!-- SLIDE 1 : Memento -->
+        <!-- SLIDE 1 -->
         <div class="carousel__item active">
           <img 
-            src="/assets/img/memento.webp" 
-            alt="Affiche du film Memento" 
+            src="/assets/img/ft1.webp" 
+            alt="katana" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Dès “Memento” (2000), Nolan démontre son intérêt 
-            pour les structures narratives non linéaires. 
-            Le film raconte l’histoire de Leonard Shelby, 
-            un homme souffrant de pertes de mémoire à court terme, 
-            présenté en séquences inversées, reflétant l’instabilité 
-            de sa mémoire et du temps.
+            Projets de Mathis Juillard : Katana
           </p>
         </div>
 
-        <!-- SLIDE 2 : Inception -->
+        <!-- SLIDE 2 -->
         <div class="carousel__item">
           <img 
-            src="/assets/img/inception.webp" 
-            alt="Affiche du film Inception" 
+            src="/assets/img/ft2.webp" 
+            alt="optic3000" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Avec “Inception” (2010), le réalisateur pousse plus loin 
-            l’exploration du temps en créant des rêves imbriqués, 
-            chacun avec sa propre échelle temporelle. 
-            Ce concept innovant offre une réflexion profonde 
-            sur la subjectivité du temps et la manière dont il peut 
-            être perçu différemment selon les niveaux de conscience.
+            Projets de Ugo Lippi : Optic 3000
           </p>
         </div>
 
-        <!-- SLIDE 3 : Interstellar -->
+        <!-- SLIDE 3 -->
         <div class="carousel__item">
           <img 
-            src="/assets/img/interstellar.webp" 
-            alt="Affiche du film Interstellar" 
+            src="/assets/img/ft3.webp" 
+            alt="Cerveau Aritificelle" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            “Interstellar” (2014) aborde le temps sous l’angle 
-            scientifique de la relativité. Le film suit un groupe 
-            d’astronautes voyageant à travers l’espace pour trouver 
-            une nouvelle planète habitable. Cette représentation 
-            cinématographique de la théorie d’Einstein met en lumière 
-            les effets de la gravité sur le temps.
+            Projets de Youssef Khadhraoui : Cerveau Aritificelle
+          </p>
+        </div>
+
+        <!-- SLIDE 4 -->
+        <div class="carousel__item">
+          <img 
+            src="/assets/img/ft4.webp" 
+            alt="Echoes of dialogue" 
+            class="carousel__image" 
+          />
+          <p class="carousel__description">
+            Projets de Eva Laccroix : Echoes of dialogue
+          </p>
+        </div>
+
+        <!-- SLIDE 5 -->
+        <div class="carousel__item">
+          <img 
+            src="/assets/img/ft5.webp" 
+            alt="Famille d'hier" 
+            class="carousel__image" 
+          />
+          <p class="carousel__description">
+            Projets de Victor Landwerlin : Famille d'hier
+          </p>
+        </div>
+
+        <!-- SLIDE 6 -->
+        <div class="carousel__item">
+          <img 
+            src="/assets/img/ft6.webp" 
+            alt="Au fil des lames" 
+            class="carousel__image" 
+          />
+          <p class="carousel__description">
+            Projets de Manolia Kocaoglu : Au fil des lames
+          </p>
+        </div>
+
+        <!-- SLIDE 7 -->
+        <div class="carousel__item">
+          <img 
+            src="/assets/img/ft7.webp" 
+            alt="Au-delà" 
+            class="carousel__image" 
+          />
+          <p class="carousel__description">
+            Projets de Myliana_Jolivet : Au-delà
+          </p>
+        </div>
+
+        <!-- SLIDE 8 -->
+        <div class="carousel__item">
+          <img 
+            src="/assets/img/ft8.webp" 
+            alt="Hat'era" 
+            class="carousel__image" 
+          />
+          <p class="carousel__description">
+            Projets de Lucas Lebars: Hat'era
           </p>
         </div>
 
         <!-- BOUTONS PREV/NEXT -->
-        <button class="carousel__button carousel__button--prev" id="prevSlide">
+        <button class="carousel__button carousel__button--prev" id="prevSlide2">
           &laquo;
         </button>
-        <button class="carousel__button carousel__button--next" id="nextSlide">
+        <button class="carousel__button carousel__button--next" id="nextSlide2">
           &raquo;
         </button>
       </div>
