--- a/fr/musique.html
+++ b/fr/musique.html
@@ -44,7 +44,7 @@
             <h4 class="article__title">Extrait de la musique</h4>
             <p class="article__text">
         <video controls class="article__video">
-            <source src="/assets/videos/Your-name.mp4" type="video/mp4">
+            <source src="/assets/videos/@coldplay - Clocks (Lyrics) (1).mp4" type="video/mp4">
             Votre navigateur ne supporte pas la lecture de vidéos.
         </video>
             </p>
