fin des pages fr et debut des pages en anglais

--- a/fr/Partenaires.html
+++ b/fr/Partenaires.html
@@ -156,6 +156,9 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer" id="contact">
+    <div class="footer__logo">
+      <img src="/assets/img/logo.svg" alt="Logo Echos of Time" />
+    </div>
     <div class="footer__info">
       <p class="footer__author">Enzo Locatelli MMI 1 B2 | enzort70290@gmail.Com</p>
       <p class="footer__mention">
