--- a/fr/index.html
+++ b/fr/index.html
@@ -20,7 +20,7 @@
       <h1 class="header__site-title">Echos of Time</h1>
 
       <!-- Bouton pour aller à la version anglaise -->
-      <a href="/ENG/index-eng.html" class="header__lang-switch">EN</a>
+      <a href="/en/index.html" class="header__lang-switch">EN</a>
     </div>
   </header>
 
@@ -135,6 +135,9 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer" id="contact">
+    <div class="footer__logo">
+      <img src="/assets/img/logo.svg" alt="Logo Echos of Time" />
+    </div>
     <div class="footer__info">
       <p class="footer__author">Enzo Locatelli MMI 1 B2 | enzort70290@gmail.Com</p>
       <p class="footer__mention">
