--- a/fr/objet.html
+++ b/fr/objet.html
@@ -112,6 +112,9 @@ Sur le plan philosophique, cette évolution nous pousse à reconsidérer notre r
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
+    <div class="footer__logo">
+      <img src="/assets/img/logo.svg" alt="Logo Echos of Time" />
+    </div>
     <div class="footer__info">
       <p class="footer__author">Enzo Locatelli MMI 1 B2 | enzort70290@gmail.Com</p>
       <p class="footer__mention">
