--- a/fr/frise.html
+++ b/fr/frise.html
@@ -144,6 +144,9 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
+    <div class="footer__logo">
+      <img src="/assets/img/logo.svg" alt="Logo Echos of Time" />
+    </div>
     <div class="footer__info">
       <p class="footer__author">Enzo Locatelli MMI 1 B2 | enzort70290@gmail.Com</p>
       <p class="footer__mention">
