--- a/fr/musique.html
+++ b/fr/musique.html
@@ -125,6 +125,9 @@ La nature cyclique de la mélodie peut symboliser la rupture avec la linéarité
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
+    <div class="footer__logo">
+      <img src="/assets/img/logo.svg" alt="Logo Echos of Time" />
+    </div>
     <div class="footer__info">
       <p class="footer__author">Enzo Locatelli MMI 1 B2 | enzort70290@gmail.Com</p>
       <p class="footer__mention">
