page en anglais

--- a/en/index.html
+++ b/en/index.html
@@ -26,21 +26,33 @@
 
   <!-- ===== MOBILE MENU ===== -->
   <nav class="mobile-menu" id="mobileMenu">
+    <!-- "X" button to close -->
+    <button class="mobile-menu__close-button" aria-label="Close Menu">×</button>
+
     <ul class="mobile-menu__list">
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="index-en.html">Home</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">Articles</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">About</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="/EN/contact.html">Contact</a>
-      </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/en/index.html">Home</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/en/about.html">About</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/en/frise.html">Timeline</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/en/contact.html">Contact</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/en/glossaire.html">Glossary</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">My selection</a>
+        </li>
     </ul>
-  </nav>
+</nav>
 
   <!-- ===== MAIN CONTENT ===== -->
   <main class="main">
@@ -70,8 +82,8 @@
           <p class="article__text">
             A journey into the heart of an object that traverses the ages: the watch.
           </p>
-          <a href="/EN/object.html" class="card__link">
-            <div class="en">Read more</div> 
+          <a href="/en/objet.html" class="card__link">
+            <div class="suite">Read more</div> 
           </a>
         </div>
       </article>
@@ -84,8 +96,8 @@
           <p class="article__text">
             Dive into the moving story of two teenagers whose destinies mysteriously cross through a supernatural body swap.
           </p>
-          <a href="/EN/movie.html" class="card__link">
-            <div class="en">Read more</div> 
+          <a href="/en/film.html" class="card__link">
+            <div class="fr">Read more</div> 
           </a>
         </div>
       </article>
@@ -98,8 +110,8 @@
           <p class="article__text">
             With its hypnotic rhythm and poignant melodies, Coldplay's "Clocks" takes us into a deep reflection on fleeting time, unmade choices, and the desire to find meaning in it.
           </p>
-          <a href="/EN/music.html" class="card__link">
-            <div class="en">Read more</div> 
+          <a href="/EN/musique.html" class="card__link">
+            <div class="fr">Read more</div> 
           </a>
         </div>
       </article>
@@ -111,8 +123,8 @@
           <p class="article__text">
             Master of modern cinema, Christopher Nolan is renowned for his captivating and complex stories, blending science, psychology, and temporality into masterpieces.
           </p>
-          <a href="#" class="card__link">
-            <div class="en">Read more</div> 
+          <a href="/en/realisateur.html" class="card__link">
+            <div class="fr">Read more</div> 
           </a>
         </div>
       </article>
@@ -124,8 +136,8 @@
           <p class="article__text">
             In "The Watchmaker of Everton," Georges Simenon plunges us into a poignant drama where a watchmaker's life is turned upside down by a crime committed by his son.
             </p>
-            <a href="#" class="card__link">
-                <div class="en">Read more</div> 
+            <a href="/en/livre.html" class="card__link">
+                <div class="fr">Read more</div> 
               </a>
         </div>
       </article>
