--- a/fr/about.html
+++ b/fr/about.html
@@ -180,6 +180,6 @@
   </footer>
 
   <!-- Script pour le menu hamburger (adapté à ton projet) -->
-  <script src="/assets/js/script.js"></script>
+  <script src="/src/js/script.js"></script>
 </body>
 </html>
