--- a/fr/index.html
+++ b/fr/index.html
@@ -85,9 +85,7 @@
           <p class="article__text">
             Plongez dans l'émouvante histoire de deux adolescents dont les destins se croisent mystérieusement grâce à un échange de corps surnaturel.
           </p>
-          <a href="/FR/film.html" class="card__link">
-            <div class="fr">Lire la suite <div> 
-          </a>
+          <a href="/FR/film.html" class="card__link">Lire la suite</a>
         </div>
       </article>
 
