--- a/en/about.html
+++ b/en/about.html
@@ -20,7 +20,7 @@
             <h1 class="header__site-title">Echoes of Time</h1>
 
             <!-- Link to the English version (optional) -->
-            <a href="index-eng.html" class="header__lang-switch">FR</a>
+            <a href="/fr/about.html" class="header__lang-switch">FR</a>
         </div>
     </header>
 
@@ -49,7 +49,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -172,18 +172,18 @@
         <nav class="footer__nav">
             <ul class="footer__menu">
                 <li class="footer__menu-item">
-                    <a href="#">
+                    <a href="/en/Partenaires.html">
                         Other Projects
                     </a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="index-eng.html">Articles</a>
+                    <a href="/en/index.html">Articles</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="contact.html">Contact</a>
+                    <a href="/en/contact.html">Contact</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#glossary">
+                    <a href="/en/glossaire.html">
                         Glossary
                     </a>
                 </li>
@@ -192,6 +192,6 @@
     </footer>
 
     <!-- Script for the hamburger menu (adapted to your project) -->
-    <script src="/assets/js/script.js"></script>
+    <script src="/src/js/script.js"></script>
 </body>
 </html>
