--- a/en/index.html
+++ b/en/index.html
@@ -49,7 +49,7 @@
             <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
         </li>
         <li class="mobile-menu__item">
-            <a class="mobile-menu__link" href="#">My selection</a>
+            <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
         </li>
     </ul>
 </nav>
@@ -160,24 +160,24 @@
     </div>
     <nav class="footer__nav">
       <ul class="footer__menu">
-        <li class="footer__menu-item">
-          <a href="#">
-            <span class="en">Other projects</span>
-          </a>
-        </li>
-        <li class="footer__menu-item">
-          <a href="#articles">Articles</a>
-        </li>
-        <li class="footer__menu-item">
-          <a href="#contact">Contact</a>
-        </li>
-        <li class="footer__menu-item">
-          <a href="#glossary">
-            <span class="en">Glossary</span>
-          </a>
-        </li>
+          <li class="footer__menu-item">
+              <a href="/en/Partenaires.html">
+                  Other Projects
+              </a>
+          </li>
+          <li class="footer__menu-item">
+              <a href="/en/index.html">Articles</a>
+          </li>
+          <li class="footer__menu-item">
+              <a href="/en/contact.html">Contact</a>
+          </li>
+          <li class="footer__menu-item">
+              <a href="/en/glossaire.html">
+                  Glossary
+              </a>
+          </li>
       </ul>
-    </nav>
+  </nav>
   </footer>
 
   <!-- Script for the hamburger menu -->
