--- a/en/musique.html
+++ b/en/musique.html
@@ -42,7 +42,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -59,7 +59,7 @@
                 <h4 class="article__title">Music Excerpt</h4>
                 <p class="article__text">
         <video controls class="article__video">
-                <source src="/assets/videos/@coldplay - Clocks (Lyrics) (1).mp4" type="video/mp4">
+                <source src="/assets/videos/clock.mp4" type="video/mp4">
                 Your browser does not support video playback.
         </video>
                 </p>
@@ -150,18 +150,20 @@
     <nav class="footer__nav">
         <ul class="footer__menu">
             <li class="footer__menu-item">
-                <a href="#">
-                    Other projects
+                <a href="/en/Partenaires.html">
+                    Other Projects
                 </a>
             </li>
             <li class="footer__menu-item">
-                <a href="index-en.html">Articles</a>
+                <a href="/en/index.html">Articles</a>
             </li>
             <li class="footer__menu-item">
-                <a href="#contact">Contact</a>
+                <a href="/en/contact.html">Contact</a>
             </li>
             <li class="footer__menu-item">
-                <a href="#glossary">Glossary</a>
+                <a href="/en/glossaire.html">
+                    Glossary
+                </a>
             </li>
         </ul>
     </nav>
