--- a/en/objet.html
+++ b/en/objet.html
@@ -18,7 +18,7 @@
             <h1 class="header__site-title">Echos of Time</h1>
 
             <!-- Button to switch to English version -->
-            <a href="/fr/objet.html" class="header__lang-switch">Fr</a>
+            <a href="/fr/objet.html" class="header__lang-switch">FR</a>
         </div>
     </header>
 
@@ -47,7 +47,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -140,18 +140,20 @@
         <nav class="footer__nav">
             <ul class="footer__menu">
                 <li class="footer__menu-item">
-                    <a href="#">
+                    <a href="/en/Partenaires.html">
                         Other Projects
                     </a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="index-fr.html">Articles</a>
+                    <a href="/en/index.html">Articles</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#contact">Contact</a>
+                    <a href="/en/contact.html">Contact</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#glossary">Glossary</a>
+                    <a href="/en/glossaire.html">
+                        Glossary
+                    </a>
                 </li>
             </ul>
         </nav>
