--- a/fr/livre.html
+++ b/fr/livre.html
@@ -13,24 +13,39 @@
     <div class="header__container">
       <button class="header__menu-toggle" aria-label="Toggle Menu">&#9776;</button>
       <h1 class="header__site-title">Echos of Time</h1>
-      <a href="index-eng.html" class="header__lang-switch">EN</a>
+      <a href="/en/livre.html" class="header__lang-switch">EN</a>
     </div>
   </header>
 
   <!-- ===== MENU MOBILE ===== -->
   <nav class="mobile-menu" id="mobileMenu">
+    <!-- "X" button to close -->
+    <button class="mobile-menu__close-button" aria-label="Close Menu">×</button>
+
     <ul class="mobile-menu__list">
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="/FR/index.html">Accueil</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">Articles</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">À propos</a>
-      </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/index.html">Acceuil</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/about.html">A Propos</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/frise.html">Frise</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/contact.html">Contact</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/glossaire.html">Glossaire</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/Partenaires.html">Autre Projets</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/recommandation.html">Ma Sélection</a>
+        </li>
     </ul>
-  </nav>
+</nav>
 
   <!-- ===== CONTENU ===== -->
       <section class="main__intro">
@@ -112,18 +127,18 @@
     <nav class="footer__nav">
       <ul class="footer__menu">
         <li class="footer__menu-item">
-          <a href="#">
+          <a href="/fr/Partenaires.html">
             Autres projets
           </a>
         </li>
         <li class="footer__menu-item">
-          <a href="index-fr.html">Articles</a>
+          <a href="/fr/index.html">Articles</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#contact">Contact</a>
+          <a href="/fr/contact.html">Contact</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#glossaire">Glossaire</a>
+          <a href="/fr/glossaire.html">Glossaire</a>
         </li>
       </ul>
     </nav>
