--- a/fr/recommandation.html
+++ b/fr/recommandation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Partenaires - Echos of Time</title>
+  <title>Sélection - Echos of Time</title>
   
   <link rel="stylesheet" href="/src/css/index.css" />
 
@@ -11,7 +11,7 @@
     <div class="header__container">
       <button class="header__menu-toggle" aria-label="Toggle Menu">&#9776;</button>
       <h1 class="header__site-title">Echos of Time</h1>
-      <a href="/en/Partenaires.html" class="header__lang-switch">EN</a>
+      <a href="/en/recommandation.html" class="header__lang-switch">EN</a>
     </div>
   </header>
 
@@ -47,14 +47,10 @@
 
   <!-- ===== CONTENU PRINCIPAL ===== -->
   <section class="main__intro">
-    <h1 class="main__intro-title">Partenaires</h1>
+    <h1 class="main__intro-title">Ma sélection</h1>
     <p class="main__intro-text">
-        Découvrez les autres projets innovants de mon groupe ! Chaque membre de mon groupe apporte une vision unique et des compétences variées, donnant vie à des créations originales. Que ce soit des sites web ou des applications , ces projets reflètent notre passion pour le numérique et l'innovation. Parcourez les différentes réalisations et laissez-vous inspirer par la créativité et le savoir-faire de chacun.    </p>
-        <img 
-        src="/assets/img/logo_mmi.png" 
-        alt="nolan" 
-        class="article__img" 
-      />
+        Découvrez ma sélection captivante de films et séries explorant le mystère du temps sous toutes ses formes. Que ce soit à travers des récits de voyages temporels, des paradoxes fascinants ou des réflexions sur l'écoulement du temps, chaque œuvre vous invite à réfléchir et à vous immerger dans cet univers complexe. Préparez-vous à une expérience cinématographique inoubliable, où passé, présent et futur s'entremêlent.  
+    </p>
   </section>
       
       <!-- === CARROUSEL === -->
@@ -63,98 +59,62 @@
         <!-- SLIDE 1 -->
         <div class="carousel__item active">
           <img 
-            src="/assets/img/ft1.webp" 
+            src="/assets/img/reco1.webp" 
             alt="katana" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Projets de Mathis Juillard : Katana
+            Dans Edge of Tomorrow, un soldat inexpérimenté, William Cage, se retrouve pris dans une boucle temporelle après avoir été tué en combattant des extraterrestres envahisseurs. À chaque mort, il revit la même journée, acquérant de nouvelles compétences et se rapprochant d'une solution pour vaincre l'ennemi. Avec l'aide de la guerrière Rita Vrataski, il doit briser ce cycle et sauver l'humanité avant que le temps ne s'épuise.
           </p>
         </div>
 
         <!-- SLIDE 2 -->
         <div class="carousel__item">
           <img 
-            src="/assets/img/ft2.webp" 
+            src="/assets/img/reco2.webp" 
             alt="optic3000" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Projets de Ugo Lippi : Optic 3000
+            Dans Loki, après avoir échappé aux Avengers, le dieu de la malice est capturé par la Time Variance Authority (TVA), une organisation qui surveille la ligne temporelle. Forcé de collaborer, Loki explore les mystères du temps, du multivers et remet en question sa propre identité, tout en affrontant des menaces qui pourraient bouleverser l'équilibre de l'univers.
           </p>
         </div>
 
         <!-- SLIDE 3 -->
         <div class="carousel__item">
           <img 
-            src="/assets/img/ft3.webp" 
+            src="/assets/img/interstellar.webp" 
             alt="Cerveau Aritificelle" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Projets de Youssef Khadhraoui : Cerveau Aritificelle
-          </p>
+            "Interstellar" (2014) aborde le temps sous l'angle scientifique de la relativité. Le film suit un groupe d'astronautes voyageant à travers l'espace pour trouver une nouvelle planète habitable. Une scène marquante illustre la dilatation du temps : sur une planète proche d'un trou noir, une heure équivaut à sept ans sur Terre. Cette représentation cinématographique de la théorie d'Einstein met en lumière les effets de la gravité sur le temps.          </p>
         </div>
 
         <!-- SLIDE 4 -->
         <div class="carousel__item">
           <img 
-            src="/assets/img/ft4.webp" 
+            src="/assets/img/reco3.webp" 
             alt="Echoes of dialogue" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Projets de Eva Laccroix : Echoes of dialogue
-          </p>
+            Dans Un jour sans fin, Phil Connors, un présentateur météo cynique, se retrouve coincé à revivre sans cesse la même journée lors d’un reportage dans une petite ville. Alors qu'il passe par diverses phases de frustration, de désespoir et de tentative d'amélioration personnelle, il doit apprendre à changer sa perspective et à tirer le meilleur de chaque journée pour espérer échapper à cette boucle temporelle.          </p>
         </div>
 
         <!-- SLIDE 5 -->
         <div class="carousel__item">
           <img 
-            src="/assets/img/ft5.webp" 
+            src="/assets/img/reco4.webp" 
             alt="Famille d'hier" 
             class="carousel__image" 
           />
           <p class="carousel__description">
-            Projets de Victor Landwerlin : Famille d'hier
+            Dans Stranger Things, un groupe d'enfants dans une petite ville américaine découvre une série d'événements surnaturels après la disparition de leur ami Will. Alors qu'ils rencontrent une fille aux pouvoirs psychiques nommée Eleven, ils réalisent que leur ville est liée à une dimension parallèle terrifiante appelée l'Upside Down. Ensemble, ils affrontent des créatures monstrueuses et des forces secrètes pour sauver leur ami et protéger leur monde des dangers inconnus.
           </p>
         </div>
 
-        <!-- SLIDE 6 -->
-        <div class="carousel__item">
-          <img 
-            src="/assets/img/ft6.webp" 
-            alt="Au fil des lames" 
-            class="carousel__image" 
-          />
-          <p class="carousel__description">
-            Projets de Manolia Kocaoglu : Au fil des lames
-          </p>
-        </div>
-
-        <!-- SLIDE 7 -->
-        <div class="carousel__item">
-          <img 
-            src="/assets/img/ft7.webp" 
-            alt="Au-delà" 
-            class="carousel__image" 
-          />
-          <p class="carousel__description">
-            Projets de Myliana_Jolivet : Au-delà
-          </p>
-        </div>
-
-        <!-- SLIDE 8 -->
-        <div class="carousel__item">
-          <img 
-            src="/assets/img/ft8.webp" 
-            alt="Hat'era" 
-            class="carousel__image" 
-          />
-          <p class="carousel__description">
-            Projets de Lucas Lebars: Hat'era
-          </p>
-        </div>
+    
 
         <!-- BOUTONS PREV/NEXT -->
         <button class="carousel__button carousel__button--prev" id="prevSlide2">
