--- a/en/frise.html
+++ b/en/frise.html
@@ -16,7 +16,7 @@
         <div class="header__container">
             <button class="header__menu-toggle" aria-label="Toggle Menu">&#9776;</button>
             <h1 class="header__site-title">Echoes of Time</h1>
-            <a href="index-eng.html" class="header__lang-switch">FR</a>
+            <a href="/fr/frise.html" class="header__lang-switch">FR</a>
         </div>
     </header>
 
@@ -45,7 +45,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -166,18 +166,18 @@
         <nav class="footer__nav">
             <ul class="footer__menu">
                 <li class="footer__menu-item">
-                    <a href="#">
+                    <a href="/en/Partenaires.html">
                         Other Projects
                     </a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="index-en.html">Articles</a>
+                    <a href="/en/index.html">Articles</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="contact.html">Contact</a>
+                    <a href="/en/contact.html">Contact</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#glossary">
+                    <a href="/en/glossaire.html">
                         Glossary
                     </a>
                 </li>
