--- a/en/glossaire.html
+++ b/en/glossaire.html
@@ -21,7 +21,7 @@
             <h1 class="header__site-title">Echoes of Time</h1>
 
             <!-- Link to the French version -->
-            <a href="index-fr.html" class="header__lang-switch">FR</a>
+            <a href="/fr/glossaire.html" class="header__lang-switch">FR</a>
         </div>
     </header>
 
@@ -50,7 +50,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -141,10 +141,22 @@
         </div>
         <nav class="footer__nav">
             <ul class="footer__menu">
-                <li class="footer__menu-item"><a href="#">Other Projects</a></li>
-                <li class="footer__menu-item"><a href="index-eng.html">Articles</a></li>
-                <li class="footer__menu-item"><a href="contact.html">Contact</a></li>
-                <li class="footer__menu-item"><a href="glossary.html">Glossary</a></li>
+                <li class="footer__menu-item">
+                    <a href="/en/Partenaires.html">
+                        Other Projects
+                    </a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="/en/index.html">Articles</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="/en/contact.html">Contact</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="/en/glossaire.html">
+                        Glossary
+                    </a>
+                </li>
             </ul>
         </nav>
     </footer>
