--- a/en/livre.html
+++ b/en/livre.html
@@ -42,7 +42,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -128,18 +128,20 @@
         <nav class="footer__nav">
             <ul class="footer__menu">
                 <li class="footer__menu-item">
-                    <a href="#">
+                    <a href="/en/Partenaires.html">
                         Other Projects
                     </a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="index-en.html">Articles</a>
+                    <a href="/en/index.html">Articles</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#contact">Contact</a>
+                    <a href="/en/contact.html">Contact</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#glossary">Glossary</a>
+                    <a href="/en/glossaire.html">
+                        Glossary
+                    </a>
                 </li>
             </ul>
         </nav>
