--- a/en/realisateur.html
+++ b/en/realisateur.html
@@ -11,7 +11,7 @@
         <div class="header__container">
             <button class="header__menu-toggle" aria-label="Toggle Menu">&#9776;</button>
             <h1 class="header__site-title">Echos of Time</h1>
-            <a href="index-eng.html" class="header__lang-switch">FR</a>
+            <a href="/fr/realisateur.html" class="header__lang-switch">FR</a>
         </div>
     </header>
 
@@ -40,7 +40,7 @@
                 <a class="mobile-menu__link" href="/en/Partenaires.html">Other Projects</a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">My selection</a>
+                <a class="mobile-menu__link" href="/en/recommandation.html">My selection</a>
             </li>
         </ul>
     </nav>
@@ -137,16 +137,20 @@
         <nav class="footer__nav">
             <ul class="footer__menu">
                 <li class="footer__menu-item">
-                    <a href="#">Other Projects</a>
+                    <a href="/en/Partenaires.html">
+                        Other Projects
+                    </a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="index-en.html">Articles</a>
+                    <a href="/en/index.html">Articles</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#contact">Contact</a>
+                    <a href="/en/contact.html">Contact</a>
                 </li>
                 <li class="footer__menu-item">
-                    <a href="#glossary">Glossary</a>
+                    <a href="/en/glossaire.html">
+                        Glossary
+                    </a>
                 </li>
             </ul>
         </nav>
