--- a/fr/contact.html
+++ b/fr/contact.html
@@ -19,27 +19,39 @@
       <h1 class="header__site-title">Echoes of Time</h1>
 
       <!-- Lien vers la version anglaise -->
-      <a href="index-eng.html" class="header__lang-switch">EN</a>
+      <a href="/en/contact.html" class="header__lang-switch">EN</a>
     </div>
   </header>
 
   <!-- ===== MENU MOBILE ===== -->
   <nav class="mobile-menu" id="mobileMenu">
+    <!-- "X" button to close -->
+    <button class="mobile-menu__close-button" aria-label="Close Menu">×</button>
+
     <ul class="mobile-menu__list">
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="index-fr.html">Accueil</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">Articles</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">À propos</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="contact.html">Contact</a>
-      </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/index.html">Acceuil</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/about.html">A Propos</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/frise.html">Frise</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/contact.html">Contact</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/glossaire.html">Glossaire</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/Partenaires.html">Autre Projets</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/recommandation.html">Ma Sélection</a>
+        </li>
     </ul>
-  </nav>
+</nav>
 
   <!-- ===== CONTENU PRINCIPAL ===== -->
   <section class="main__intro">
@@ -120,10 +132,20 @@
     </div>
     <nav class="footer__nav">
       <ul class="footer__menu">
-        <li class="footer__menu-item"><a href="#">Autres projets</a></li>
-        <li class="footer__menu-item"><a href="#">Articles</a></li>
-        <li class="footer__menu-item"><a href="contact.html">Contact</a></li>
-        <li class="footer__menu-item"><a href="#">Glossaire</a></li>
+        <li class="footer__menu-item">
+          <a href="/fr/Partenaires.html">
+            Autres projets
+          </a>
+        </li>
+        <li class="footer__menu-item">
+          <a href="/fr/index.html">Articles</a>
+        </li>
+        <li class="footer__menu-item">
+          <a href="/fr/contact.html">Contact</a>
+        </li>
+        <li class="footer__menu-item">
+          <a href="/fr/glossaire.html">Glossaire</a>
+        </li>
       </ul>
     </nav>
   </footer>
