--- a/fr/objet.html
+++ b/fr/objet.html
@@ -18,24 +18,39 @@
       <h1 class="header__site-title">Echos of Time</h1>
 
       <!-- Bouton pour aller à la version anglaise -->
-      <a href="index-eng.html" class="header__lang-switch">EN</a>
+      <a href="/en/objet.html" class="header__lang-switch">EN</a>
     </div>
   </header>
 
   <!-- ===== MENU MOBILE ===== -->
   <nav class="mobile-menu" id="mobileMenu">
+    <!-- "X" button to close -->
+    <button class="mobile-menu__close-button" aria-label="Close Menu">×</button>
+
     <ul class="mobile-menu__list">
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="/FR/index.html">Accueil</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">Articles</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="#">À propos</a>
-      </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/index.html">Acceuil</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/about.html">A Propos</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/frise.html">Frise</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/contact.html">Contact</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/glossaire.html">Glossaire</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/Partenaires.html">Autre Projets</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="/fr/recommandation.html">Ma Sélection</a>
+        </li>
     </ul>
-  </nav>
+</nav>
 
   <!-- ===== CONTENU PRINCIPAL ===== -->
   <section class="main__intro">
@@ -125,18 +140,18 @@ Sur le plan philosophique, cette évolution nous pousse à reconsidérer notre r
     <nav class="footer__nav">
       <ul class="footer__menu">
         <li class="footer__menu-item">
-          <a href="#">
+          <a href="/fr/Partenaires.html">
             Autres projets
           </a>
         </li>
         <li class="footer__menu-item">
-          <a href="index-fr.html">Articles</a>
+          <a href="/fr/index.html">Articles</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#contact">Contact</a>
+          <a href="/fr/contact.html">Contact</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#glossaire">Glossaire</a>
+          <a href="/fr/glossaire.html">Glossaire</a>
         </li>
       </ul>
     </nav>
