--- a/fr/contact.html
+++ b/fr/contact.html
@@ -30,7 +30,7 @@
 
     <ul class="mobile-menu__list">
         <li class="mobile-menu__item">
-            <a class="mobile-menu__link" href="/fr/index.html">Acceuil</a>
+            <a class="mobile-menu__link" href="/fr/index.html">Accueil</a>
         </li>
         <li class="mobile-menu__item">
             <a class="mobile-menu__link" href="/fr/about.html">A Propos</a>
