--- a/fr/musique.html
+++ b/fr/musique.html
@@ -171,6 +171,6 @@ La nature cyclique de la mélodie peut symboliser la rupture avec la linéarité
   </footer>
 
   <!-- Script pour le menu hamburger -->
-  <script src="/assets/js/script.js"></script>
+  <script src="/src/js/script.js"></script>
 </body>
 </html>
