ajout des lien au partenaires

--- a/fr/Partenaires.html
+++ b/fr/Partenaires.html
@@ -62,11 +62,13 @@
         
         <!-- SLIDE 1 -->
         <div class="carousel__item active">
+          <a href="http://katana.mathis-juillard.fr/" target="_blank">
           <img 
             src="/assets/img/ft1.webp" 
             alt="katana" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Mathis Juillard : Katana
           </p>
@@ -74,11 +76,13 @@
 
         <!-- SLIDE 2 -->
         <div class="carousel__item">
+          <a href="#" target="_blank">
           <img 
             src="/assets/img/ft2.webp" 
             alt="optic3000" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Ugo Lippi : Optic 3000
           </p>
@@ -86,11 +90,13 @@
 
         <!-- SLIDE 3 -->
         <div class="carousel__item">
-          <img 
-            src="/assets/img/ft3.webp" 
-            alt="Cerveau Aritificelle" 
-            class="carousel__image" 
-          />
+          <a href="#" target="_blank">
+            <img 
+              src="/assets/img/ft3.webp" 
+              alt="Cerveau Aritificelle" 
+              class="carousel__image" 
+            />
+          </a>
           <p class="carousel__description">
             Projets de Youssef Khadhraoui : Cerveau Aritificelle
           </p>
@@ -98,11 +104,13 @@
 
         <!-- SLIDE 4 -->
         <div class="carousel__item">
+          <a href="https://echoes-of-dialogue.eva-lacroix.fr" target="_blank">
           <img 
             src="/assets/img/ft4.webp" 
             alt="Echoes of dialogue" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Eva Laccroix : Echoes of dialogue
           </p>
@@ -110,11 +118,13 @@
 
         <!-- SLIDE 5 -->
         <div class="carousel__item">
+          <a href="https://victor-landwerlin-famille-d-hier.netlify.app/" target="_blank">
           <img 
             src="/assets/img/ft5.webp" 
             alt="Famille d'hier" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Victor Landwerlin : Famille d'hier
           </p>
@@ -122,11 +132,13 @@
 
         <!-- SLIDE 6 -->
         <div class="carousel__item">
+          <a href="#" target="_blank">
           <img 
             src="/assets/img/ft6.webp" 
             alt="Au fil des lames" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Manolia Kocaoglu : Au fil des lames
           </p>
@@ -134,11 +146,13 @@
 
         <!-- SLIDE 7 -->
         <div class="carousel__item">
+          <a href="#" target="_blank">
           <img 
             src="/assets/img/ft7.webp" 
             alt="Au-delà" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Myliana_Jolivet : Au-delà
           </p>
@@ -146,11 +160,13 @@
 
         <!-- SLIDE 8 -->
         <div class="carousel__item">
+          <a href="https://hat-era.netlify.app/" target="_blank">
           <img 
             src="/assets/img/ft8.webp" 
             alt="Hat'era" 
             class="carousel__image" 
           />
+        </a>
           <p class="carousel__description">
             Projets de Lucas Lebars: Hat'era
           </p>
