--- a/en/Partenaires.html
+++ b/en/Partenaires.html
@@ -61,101 +61,117 @@
             <!-- === CAROUSEL === -->
             <div class="carousel" id="PartnersCarousel">
                 
-                <!-- SLIDE 1 -->
-                <div class="carousel__item active">
-                    <img 
-                        src="/assets/img/ft1.webp" 
-                        alt="katana" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Mathis Juillard's Projects: Katana
-                    </p>
-                </div>
+                 <!-- SLIDE 1 -->
+        <div class="carousel__item active">
+            <a href="http://katana.mathis-juillard.fr/" target="_blank">
+                <img 
+                    src="/assets/img/ft1.webp" 
+                    alt="Katana" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Mathis Juillard: Katana
+            </p>
+        </div>
 
-                <!-- SLIDE 2 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft2.webp" 
-                        alt="optic3000" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Ugo Lippi's Projects: Optic 3000
-                    </p>
-                </div>
+        <!-- SLIDE 2 -->
+        <div class="carousel__item">
+            <a href="#" target="_blank">
+                <img 
+                    src="/assets/img/ft2.webp" 
+                    alt="Optic 3000" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Ugo Lippi: Optic 3000
+            </p>
+        </div>
 
-                <!-- SLIDE 3 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft3.webp" 
-                        alt="Artificial Brain" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Youssef Khadhraoui's Projects: Artificial Brain
-                    </p>
-                </div>
+        <!-- SLIDE 3 -->
+        <div class="carousel__item">
+            <a href="#" target="_blank">
+                <img 
+                    src="/assets/img/ft3.webp" 
+                    alt="Artificial Brain" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Youssef Khadhraoui: Cerveau Aritificelle
+            </p>
+        </div>
 
-                <!-- SLIDE 4 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft4.webp" 
-                        alt="Echoes of Dialogue" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Eva Laccroix's Projects: Echoes of Dialogue
-                    </p>
-                </div>
+        <!-- SLIDE 4 -->
+        <div class="carousel__item">
+            <a href="https://echoes-of-dialogue.eva-lacroix.fr" target="_blank">
+                <img 
+                    src="/assets/img/ft4.webp" 
+                    alt="Echoes of dialogue" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Eva Laccroix: Echoes of dialogue
+            </p>
+        </div>
 
-                <!-- SLIDE 5 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft5.webp" 
-                        alt="Family of Yesterday" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Victor Landwerlin's Projects: Family of Yesterday
-                    </p>
-                </div>
+        <!-- SLIDE 5 -->
+        <div class="carousel__item">
+            <a href="https://victor-landwerlin-famille-d-hier.netlify.app/" target="_blank">
+                <img 
+                    src="/assets/img/ft5.webp" 
+                    alt="Yesterday's Family" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Victor Landwerlin: Famille d'hier
+            </p>
+        </div>
 
-                <!-- SLIDE 6 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft6.webp" 
-                        alt="Through the Blades" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Manolia Kocaoglu's Projects: Through the Blades
-                    </p>
-                </div>
+        <!-- SLIDE 6 -->
+        <div class="carousel__item">
+            <a href="#" target="_blank">
+                <img 
+                    src="/assets/img/ft6.webp" 
+                    alt="Along the Blades" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Manolia Kocaoglu: Au fil des lames
+            </p>
+        </div>
 
-                <!-- SLIDE 7 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft7.webp" 
-                        alt="Beyond" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Myliana Jolivet's Projects: Beyond
-                    </p>
-                </div>
+        <!-- SLIDE 7 -->
+        <div class="carousel__item">
+            <a href="#" target="_blank">
+                <img 
+                    src="/assets/img/ft7.webp" 
+                    alt="Beyond" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Myliana_Jolivet: Au-delà
+            </p>
+        </div>
 
-                <!-- SLIDE 8 -->
-                <div class="carousel__item">
-                    <img 
-                        src="/assets/img/ft8.webp" 
-                        alt="Hat'era" 
-                        class="carousel__image" 
-                    />
-                    <p class="carousel__description">
-                        Lucas Lebars' Projects: Hat'era
-                    </p>
-                </div>
+        <!-- SLIDE 8 -->
+        <div class="carousel__item">
+            <a href="https://hat-era.netlify.app/" target="_blank">
+                <img 
+                    src="/assets/img/ft8.webp" 
+                    alt="Hat'era" 
+                    class="carousel__image" 
+                />
+            </a>
+            <p class="carousel__description">
+                Projects by Lucas Lebars: Hat'era
+            </p>
+        </div>
 
                 <!-- PREV/NEXT BUTTONS -->
                 <button class="carousel__button carousel__button--prev" id="prevSlide2">
